# Cobalt-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
Assets/: AssetRegistry.json
Editor/: CMakeLists.txt
Editor/Source/: main.cpp
Editor/Source/Editor/: main.cpp
Editor/Source/Editor/Core/: EditorApplication.cpp  EditorApplication.hpp  EditorState.hpp  Project.cpp  Project.hpp
Editor/Source/Editor/Embedded/Fonts/: InterBold.embed  InterRegular.embed  InterSemibold.embed
Editor/Source/Editor/Embedded/Icons/: Lucide.embed
Editor/Source/Editor/Gui/: Colors.hpp  FontIcons.hpp  Fonts.hpp  Gui.cpp  Gui.hpp  Helpers.hpp  IPanel.hpp  ImGuiBuild.cpp  Widgets.cpp  Widgets.hpp
Editor/Source/Editor/Gui/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.hpp  EntityComponentsPanel.cpp  EntityComponentsPanel.hpp  LogPanel.cpp  LogPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
Engine/: CMakeLists.txt  imgui.ini
Engine/Assets/Editor/Settings/: DefaultLayout.ini
Engine/Assets/Shaders/: DefaultQuad.frag  DefaultQuad.vert
Engine/Source/: test.cpp  test.hpp
Engine/Source/Engine/Assets/: AssetManager.cpp  AssetManager.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetType.hpp  IAsset.hpp  IAssetLoader.hpp  IAssetSerializer.hpp
Engine/Source/Engine/Assets/Loaders/: ScriptLoader.cpp  ScriptLoader.hpp  Texture2DLoader.cpp  Texture2DLoader.hpp
Engine/Source/Engine/Assets/Serializers/: SceneSerializer.cpp  SceneSerializer.hpp  ScriptSerializer.cpp  ScriptSerializer.hpp  Texture2DSerializer.cpp  Texture2DSerializer.hpp
Engine/Source/Engine/Core/: Application.cpp  Application.hpp  CommandLineArgs.hpp  Defines.hpp  EASTLConfig.cpp  EngineContext.hpp  EntryPoint.hpp  File.cpp  File.hpp  Fwd.hpp  Log.cpp  Log.hpp  Logger.hpp  Project.cpp  Project.hpp  Time.cpp  Time.hpp  Types.hpp  Window.hpp
Engine/Source/Engine/Core/Types/: Base.hpp  Color.hpp  Containers.hpp  Math.hpp  Memory.hpp  UUID.hpp
Engine/Source/Engine/ECS/: Entity.hpp
Engine/Source/Engine/ECS/Components/: Minimal.hpp  ScriptComponent.hpp  SpriteComponent.hpp  TagComponent.hpp  TransformComponent.hpp
Engine/Source/Engine/ECS/Systems/: EditorRenderSystem.cpp  EditorRenderSystem.hpp  ISystem.hpp  Schedule.hpp  ScriptStartSystem.cpp  ScriptStartSystem.hpp  ScriptUpdateSystem.cpp  ScriptUpdateSystem.hpp  TestSystem.cpp  TestSystem.hpp
Engine/Source/Engine/Events/: ApplicationEvents.hpp  Dispatcher.hpp  DropEvents.hpp  EventBus.hpp  EventType.hpp  GamepadEvents.hpp  IEvent.hpp  KeyboardEvents.hpp  LogEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
Engine/Source/Engine/Graphics/: Attributes.cpp  Attributes.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Fwd.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Quad.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Engine/Source/Engine/Platform/: DialogManager.cpp  DialogManager.hpp  Fwd.hpp  Platform.cpp  Platform.hpp  Window.hpp
Engine/Source/Engine/Platform/Linux/: LinuxWindow.cpp
Engine/Source/Engine/Platform/OpenGL/: gl.h
Engine/Source/Engine/Platform/Windows/: WindowsWindow.cpp
Engine/Source/Engine/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneState.hpp
Engine/Source/Engine/Scripting/: Script.cpp  Script.hpp  ScriptEntity.cpp  ScriptEntity.hpp  ScriptGlue.cpp  ScriptGlue.hpp  ScriptManager.cpp  ScriptManager.hpp
Sandbox/: Sandbox.cbproj
Sandbox/Assets/: AssetRegistry.json
Sandbox/Assets/Scenes/: Default.cbscene  Sandbox.cbscene
Sandbox/Assets/Scripts/: Mover.as  Player.as  as.predefined
Sandbox/Settings/: DefaultLayout.ini
Scripts/: UpdateCopyright.py
Settings/: DefaultLayout.ini
Tests/: CMakeLists.txt
Tests/Source/Core/: Color.cpp  UUID.cpp
