add_library(Engine STATIC
	Source/Engine/Core/Application.cpp
	Source/Engine/Core/Application.hpp
	Source/Engine/Core/Logger.hpp
	Source/Engine/Core/Defines.hpp
	Source/Engine/Platform/Window.hpp
	Source/Engine/Platform/Linux/LinuxWindow.cpp
	Source/Engine/Platform/Windows/WindowsWindow.cpp
	Source/Engine/Platform/Platform.cpp
	Source/Engine/Platform/Platform.hpp
	Source/Engine/Scene/SceneManager.cpp
	Source/Engine/Scene/SceneManager.hpp
	Source/Engine/Scene/Scene.hpp
	Source/Engine/ECS/Components/TagComponent.hpp
	Source/Engine/Scene/Scene.cpp
	Source/Engine/Core/Types/Base.hpp
	Source/Engine/Core/Types/Containers.hpp
	Source/Engine/Core/Types/Memory.hpp
	Source/Engine/Core/Types/UUID.hpp
	Source/Engine/Core/Types/Color.hpp
	Source/Engine/Graphics/Renderer.cpp
	Source/Engine/Graphics/Renderer.hpp
	Source/Engine/Graphics/Quad.hpp
	Source/Engine/Core/Types/Math.hpp
	Source/Engine/Graphics/Shader.cpp
	Source/Engine/Graphics/Shader.hpp
	Source/Engine/Core/File.cpp
	Source/Engine/Core/File.hpp
	Source/Engine/Graphics/VertexArray.cpp
	Source/Engine/Graphics/VertexArray.hpp
	Source/Engine/Graphics/VertexBuffer.cpp
	Source/Engine/Graphics/VertexBuffer.hpp
	Source/Engine/Graphics/Attributes.hpp
	Source/Engine/Graphics/Attributes.cpp
	Source/Engine/Graphics/IndexBuffer.cpp
	Source/Engine/Graphics/IndexBuffer.hpp
	Source/Engine/Graphics/Camera.cpp
	Source/Engine/Graphics/Camera.hpp
	Source/Engine/ECS/Systems/ISystem.hpp
	Source/Engine/ECS/Systems/EditorRenderSystem.cpp
	Source/Engine/ECS/Systems/EditorRenderSystem.hpp
	Source/Engine/ECS/Systems/Schedule.hpp
	Source/Engine/Scene/SceneState.hpp
	Source/Engine/Core/Fwd.hpp
	Source/Engine/Graphics/Fwd.hpp
	Source/Engine/ECS/Components/SpriteComponent.hpp
	Source/Engine/ECS/Components/TransformComponent.hpp
	Source/Engine/Graphics/Framebuffer.cpp
	Source/Engine/Graphics/Framebuffer.hpp
	Source/Engine/ECS/Entity.hpp
	Source/Engine/ECS/Components/Minimal.hpp
	Source/Engine/Core/EntryPoint.hpp
	Source/Engine/Core/CommandLineArgs.hpp
	Source/Engine/Events/EventType.hpp
	Source/Engine/Events/IEvent.hpp
	Source/Engine/Events/Dispatcher.hpp
	Source/Engine/Events/ApplicationEvents.hpp
	Source/Engine/Events/WindowEvents.hpp
	Source/Engine/Events/KeyboardEvents.hpp
	Source/Engine/Events/MouseEvents.hpp
	Source/Engine/Events/GamepadEvents.hpp
	Source/Engine/Events/DropEvents.hpp
	Source/Engine/Core/Project.cpp
	Source/Engine/Core/Project.hpp
	Source/Engine/Assets/AssetManager.cpp
	Source/Engine/Assets/AssetManager.hpp
	Source/Engine/Assets/AssetType.hpp
	Source/Engine/Assets/AssetMetadata.hpp
	Source/Engine/Core/EngineContext.hpp
	Source/Engine/Assets/IAsset.hpp
	Source/Engine/Assets/IAssetLoader.hpp
	Source/Engine/Graphics/Texture2D.cpp
	Source/Engine/Graphics/Texture2D.hpp
	Source/Engine/Assets/Loaders/Texture2DLoader.cpp
	Source/Engine/Assets/Loaders/Texture2DLoader.hpp
)

target_link_libraries(Engine PUBLIC
	glm::glm
	EnTT::EnTT
	SDL3::SDL3
	simdjson
	tomlplusplus::tomlplusplus
)

target_include_directories(Engine PUBLIC
	Source
	${CMAKE_SOURCE_DIR}/Vendor/GLAD
	${CMAKE_SOURCE_DIR}/Vendor/STB
)

target_compile_definitions(Engine PRIVATE
	$<$<CONFIG:Debug>:CONFIG_DEBUG>
	$<$<CONFIG:Release>:CONFIG_RELEASE>
	$<$<CONFIG:MinSizeRel>:CONFIG_RELEASE>
)